@@ -1,3 +1,4 @@
+	* piece timeouts are adjusted to download rate limits
 	* encodes urls in torrent files that needs to be encoded
 	* fixed not passing &supportcrypto=1 when encryption is disabled
 	* introduced an upload mode, which torrents are switched into when
